add overall view of defineSchedule

--- a/TODO
+++ b/TODO
@@ -23,3 +23,11 @@ CSV Output:
 
 システムの統合テスト:
   ☐ 統合テスト記述
+
+今後やりたいこと:
+  ☐ Layerd Archetectureの反映
+  ☐ 並行処理による高速化
+
+メンターさんに聞きたいこと:
+  ☐ 逆にこれをGoで作る意味ってあるか？
+  ☐ アルゴリズムに関しての相談、より良いアルゴリズムはあるか
