--- a/TODO
+++ b/TODO
@@ -7,12 +7,13 @@ CSV Import:
 
 システムの実装:
   ☐ 要件の確認
-  ☐ アルゴリズムの調査
-  ☐ システムフロー設計
+  ✔ アルゴリズムの調査 @done(20-07-24 07:53)
+  ✔ システムフロー設計 @done(20-07-24 07:53)
   Todo:
-    ☐ シーケンス図 or フローチャート作成
-    ☐ アーキテクチャ決定
-    ☐ 作成する関数決定
+    ✔ シーケンス図 or フローチャート作成 @done(20-07-24 07:53)
+    ✔ アーキテクチャ決定 @done(20-07-24 07:53)
+    ✔ 作成する関数決定 @done(20-07-24 09:01)
+    ☐ 簡単なテストケース作成
   ☐ 実装
   ☐ 入力テスト
 
