--- a/TODO
+++ b/TODO
@@ -31,4 +31,4 @@ CSV Output:
 
 メンターさんに聞きたいこと:
   ☐ 逆にこれをGoで作る意味ってあるか？
-  ☐ アルゴリズムに関しての相談、より良いアルゴリズムはあるか
+  ✔ アルゴリズムに関しての相談、より良いアルゴリズムはあるか @done(20-07-24 09:41)
