ロールバック処理実装

--- a/TODO
+++ b/TODO
@@ -32,3 +32,6 @@ CSV Output:
 メンターさんに聞きたいこと:
   ☐ 逆にこれをGoで作る意味ってあるか？
   ✔ アルゴリズムに関しての相談、より良いアルゴリズムはあるか @done(20-07-24 09:41)
+
+出てきた疑問点:
+  ☐ 別パッケージにまたがるテストの際に、データの初期化ってどうやってやる？private変数にアクセスできない
